# zoa-reference-cli

./: .gitignore  CLAUDE.md  README.md  build_exe.py  install.py  pyproject.toml  zoa  zoa.cmd
.github/workflows/: release.yml
docs/plans/: MAIN.md  cifp-parser-drift-from-yaat.md
src/zoa_ref/: NAVAID_System.geojson  __init__.py  airways.py  approaches.py  atis.py  autocomplete.py  browser.py  cache.py  charts.py  cifp.py  cli.py  cli_utils.py  commands.py  completers.py  config.py  descent.py  display.py  distance.py  frequency.py  fuzzy.py  hotkey.py  icao.py  input.py  interactive.py  mea.py  nasr.py  navaids.py  navdata.py  playwright_bootstrap.py  positions.py  procedures.py  routes.py  scratchpads.py  waypoints.py
tests/: conftest.py  test_airac.py  test_bearing.py  test_bearing_cli.py  test_charts_chart_code.py  test_cifp_altitude.py  test_cifp_continuation.py  test_cifp_fix_role.py  test_cifp_fly_over.py  test_cifp_geometry.py  test_cifp_missed_approach.py  test_cifp_navaids.py  test_cifp_rf_arcs.py  test_cifp_route_type.py  test_cifp_terminators.py  test_cifp_waypoints.py  test_conftest_fixture.py
